[project]
name = "jwskate"
description = "A Pythonic implementation of the JOSE / JSON Web Crypto related RFCs (JWS, JWK, JWA, JWT, JWE)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "Guillaume Pujol", email = "guill.p.linux@gmail.com" }
]
dynamic = ["version"]

classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Topic :: Security',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
]
dependencies = [
    "cryptography>=3.4",
    "typing-extensions>=4.3",
    "binapy>=0.8",
]

[project.urls]
homepage = "https://github.com/guillp/jwskate"
documentation = "https://guillp.github.io/jwskate/"
pypi = "https://pypi.org/project/jwskate/"


[tool]
[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "jwskate/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["jwskate"]

[tool.hatch.build.targets.sdist]
exclude = [
    "/.github",
    "/docs",
]

[tool.hatch.envs.default]
dependencies = [
    "jwcrypto>=1.5.6",
    "pre-commit>=3.5.0",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.envs.test]
dependencies = [
    "coverage[toml]",
    "jwcrypto>=1.5.6",
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "pytest_freezer>=0.4.8",
    "pytest-mypy>=0.10.3",
    "pytest-profiling>=1.7.0",
]
[tool.hatch.envs.test.scripts]
test = "pytest {args:tests}"
test-cov = "pytest --cov {args:tests}"
cov-report = [
    "- coverage combine",
    "coverage xml",
    "coverage report --show-missing",
]
cov = [
    "test-cov",
    "cov-report",
]

[tools.hatch.envs.all]
type = "container"

[[envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.docs]
dependencies = [
    "mkdocs>=1.6.0",
    "mkdocstrings[python]>=0.25.1",
    "mkdocs-autorefs>=1.0.1",
    "mkdocs-include-markdown-plugin>=6.0.6",
    "mkdocs-material>=9.5.21",
    "mkdocs-material-extensions>=1.3.1",
]
[tool.hatch.envs.docs.scripts]
build = "mkdocs build --clean --strict"
serve = "mkdocs serve --dev-addr localhost:8000"


[tool.hatch.envs.lint]
detached = true
dependencies = [
    "mypy>=1.10.0",
    "ruff>=0.4.3",
    "pytest>=8.2.0",
    "types-cryptography>=3.3.23.2",
    "binapy>=0.8.0",
    "jwcrypto>=1.5.6",
]

[tool.hatch.envs.lint.scripts]
typing = "mypy --install-types --non-interactive {args:jwskate tests}"
style = [
    "ruff format {args:.}",
]
fmt = [
    "ruff check --fix {args:.}",
    "style",
]
all = [
    "style",
    "typing",
]

[tool.mypy]
strict = true
pretty = true
show_error_context = true
show_column_numbers = true
show_error_codes = true
warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_casts = true

[tool.docformatter]
recursive = true
wrap-summaries = 120
wrap-descriptions = 120
blank = true

[tool.ruff]
target-version = "py38"
line-length = 120
exclude = [
    "tests"
]

[tool.ruff.lint]
select = [
    "A",
    "B",
    "C",
    "C4",
    "D",
    "DTZ",
    "E",
    "EM",
    "ERA",
    "F",
    "FA",
    "FBT",
    "I",
    "ICN",
    "ISC",
    "N",
    "PGH",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "PTH",
    "Q",
    "RUF",
    "S",
    "SIM",
    "T",
    "TID",
    "TRY",
    "UP",
    "W",
    "YTT",
]
ignore = [
    "RUF012", # Mutable class attributes should be annotated with `typing.ClassVar`
    "N818", # Exception names should be named with an Error suffix
    "PLR0912", # Too many branches
    "D107", # Missing docstring in `__init__`
    "ISC001", # Implicitly concatenated string literals on one line
]



[tool.ruff.lint.pydocstyle]
convention = "google"
ignore-decorators = ['override']

[tool.ruff.lint.pylint]
max-args = 10


[tool.coverage.run]
omit = [
    "tests/"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "def main",
    "...",
    "assert False",
    "pytest.skip",
    "pass",
]
